# shudaodao_app

./: .gitignore  README.md  download_models.py  pyproject.toml  requirements.txt
admin/css/: default.css
admin/css/default/: 00_reset.css  01_element.css
admin/pages/delete/: chatbot.html
admin/pages/demo/: cookie.html  index.html
admin/scripts/components/base/: message_manager.js  scroll_manager.js  upload_manager.js
admin/scripts/delete/: utils.js
apps/: README.md
config/: README.md  base.yaml  dev.yaml  license.jwt  prod.yaml  public.pem
config/casbin/: model.conf  text.md
config/example/: 全部节点.yaml
config/secrets/: dev.yaml  prod.yaml
database/: README.md  auth_user.db  shudaodao_auth.db  shudaodao_enum.db
docs/: API_日期处理.md  API_查询接口.md  API返回接口.md
src/: app.py  main.py  middleware.py
src/shudaodao_generate/: __init__.py
tests/: display_modules.py  test_build_database.py  test_query_request.py
web/css/: font.css  markdown.css
web/css/default/: 02_layout_container.css  03_layout_panel.css  04_response.css  05_uploader.css
web/css/demo/: index.css
web/pages/: main.html
web/pages/demo/: generate.html  knowledgebase.html  login.html  password.html  register.html
web/scripts/: default.js
web/scripts/components/: shudao_agent.js
web/scripts/components/base/: cookie_manager.js  request_manager.js  slider_manager.js
web/scripts/delete/: chatbot.js
