[project]
name = "SmartShudao"
version = "0.1.3"
description = "SmartShudao"
readme = "README.md"
authors = [
    { name = "ShuDaoDao", email = "lf_shao@163.com" },
]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "casbin>=1.43.0",
    "casbin_async_sqlalchemy_adapter>=1.10.0",
    "chromadb>=1.0.21",
    "Cython>=3.1.4",
    "fastapi>=0.117.1",
    "greenlet>=3.2.4",
    "httpx>=0.28.1",
    "Jinja2>=3.1.6",
    "modelscope>=1.29.1",
    "numpy>=2.2.6",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.9",
    "pydantic[email]>=2.11.7",
    "PyPDF2>=3.0.1",
    "pytest>=8.4.1",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "PyYAML>=6.0.2",
    "redis>=6.4.0",
    "setuptools>=80.9.0",
    "sentence-transformers>=5.0.0",
    "SQLAlchemy>=2.0.43",
    "sqlmodel>=0.0.25",
    "starlette>=0.48.0",
    "torch>=2.7.0",
    "transformers>=4.56.0",
    "uvicorn>=0.35.0",
    "python-jose[cryptography]>=3.5.0",
]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple/"
default = true
